tests/machine/x/c/tree_sum.error
exit status 1
/workspace/mochi/tests/machine/x/c/tree_sum.c:12:3: error: unknown type name ‘Tree’
   12 |   Tree *left;
      |   ^~~~
/workspace/mochi/tests/machine/x/c/tree_sum.c:14:3: error: unknown type name ‘Tree’
   14 |   Tree *right;
      |   ^~~~
/workspace/mochi/tests/machine/x/c/tree_sum.c:26:14: error: unknown type name ‘Tree’; did you mean ‘tree_t’?
   26 | int sum_tree(Tree t) {
      |              ^~~~
      |              tree_t
/workspace/mochi/tests/machine/x/c/tree_sum.c: In function ‘_mochi_main’:
/workspace/mochi/tests/machine/x/c/tree_sum.c:48:8: error: ‘Tree’ undeclared (first use in this function); did you mean ‘free’?
   48 |       (Tree){.tag = Tree_Node,
      |        ^~~~
      |        free
/workspace/mochi/tests/machine/x/c/tree_sum.c:48:8: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/machine/x/c/tree_sum.c:48:13: error: expected ‘,’ or ‘;’ before ‘{’ token
   48 |       (Tree){.tag = Tree_Node,
      |             ^
/workspace/mochi/tests/machine/x/c/tree_sum.c:57:18: warning: implicit declaration of function ‘sum_tree’ [-Wimplicit-function-declaration]
   57 |   printf("%d\n", sum_tree(t));
      |                  ^~~~~~~~
